--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <html>
-  <header>
+  <head>
+    <title>Minimalistic To-do List</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🖊️</text></svg>">
     <link rel="stylesheet" href="style.css">
     <script src="./index.js" async></script>    
-  </header>
+  </head>
   <body>
     <div class="container">
       <h1>To-do list:</h1>
       <ul id='list'>
       </ul>
       <section class="insert-section">
-        <input type="text" class="add-todo" placeholder="+ Add to-do">
+        <textarea type="textarea" class="add-todo" placeholder="+ Add to-do"></textarea>
       </section>
     </div>
   </body>
