--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Minimalistic To-do List</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🖊️</text></svg>">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/index.css">
     <script src="./index.js" async></script>    
   </head>
   <body>
